# xpertik-odontograma

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  NORMA_CUMPLIMIENTO.md  README.md  RELEASING.md  contexto.md  pyproject.toml
.atl/: skill-registry.md
.github/workflows/: release-testpypi.yml  tests.yml
docs/feedback/: caso-carlos-mendoza.md  distribucion-zonas-diente.md  nomenclaturas-catalog.md
tests/: conftest.py  models.py  test_apice_roundtrip.py  test_backward_compat_v0_1.py  test_backward_compat_v0_2.py  test_constants.py  test_cross_teeth_disabled.py  test_field_roundtrip.py  test_profile_peru_especificaciones.py  test_profile_peru_extension_enforcement.py  test_profile_peru_fields.py  test_profile_peru_states.py  test_profile_peru_validators.py  test_profile_peru_widget.py  test_profile_registry.py  test_settings_merge.py  test_seven_core_nomenclaturas.py  test_svg_print_layout.py  test_svg_renderer.py  test_svg_silhouettes.py  test_validators.py  test_widget_render.py
tests/testproject/: settings.py  urls.py
xpertik_odontograma/: apps.py  constants.py  fields.py  forms.py  settings.py  validators.py  widgets.py
xpertik_odontograma/profiles/: __init__.py  registry.py
xpertik_odontograma/profiles/peru/: __init__.py  apps.py  constants.py  fields.py  specifications.py  states.py  validators.py  widgets.py
xpertik_odontograma/profiles/peru/static/xpertik_odontograma/profiles/peru/css/: peru-chart.css
xpertik_odontograma/profiles/peru/static/xpertik_odontograma/profiles/peru/js/: peru-chart.js
xpertik_odontograma/profiles/peru/templates/xpertik_odontograma/profiles/peru/: peru_chart.html
xpertik_odontograma/static/xpertik_odontograma/css/: odontograma-svg.css  odontograma.css
xpertik_odontograma/static/xpertik_odontograma/js/: odontograma-svg.js  odontograma.js
xpertik_odontograma/svg/: __init__.py  renderer.py  silhouettes.py
xpertik_odontograma/templates/xpertik_odontograma/: _tooth_cell.html  _tooth_grid.html  svg_chart.html  widget.html  widget_readonly.html
